# excavator

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: arm-gcc-toolchain.cmake
linker/: stm32f446re.ld
openocd/: stm32f446re.cfg
src/app/: app.c  app.h  main.c  telemetry.c  telemetry.h
src/config/: config.c  config.h
src/drivers/bmi160/: bmi160.c  bmi160.h
src/drivers/gps/: gps_parser.c  gps_parser.h
src/math/: kinematics.c  kinematics.h  orientation.c  orientation.h
src/model/: calibration.c  calibration.h  excavator_state.c  excavator_state.h
src/platform/: platform.c  platform.h  platform_simulated_io.c  platform_simulated_io.h  platform_stub.c  startup_placeholder.c
tests/: CMakeLists.txt  test_app.c  test_bmi160.c  test_calibration.c  test_config.c  test_excavator_state.c  test_gps_parser.c  test_kinematics.c  test_orientation.c  test_platform.c  test_platform_io.c  test_telemetry.c
